--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Nunito Sans', sans-serif;
-    height: 1900px;
+    
 }
 .container {
     max-width: 1180px;
@@ -143,8 +143,9 @@ header {
     background-image: url(../img/banner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 100px;
+    padding: 100px 100px 120px;
     background-position: center center;
+    margin-bottom: 100px;
 }
 .banner-title {
     font-weight: 900;
@@ -184,4 +185,154 @@ header {
     color: #1E2F40;
     border-radius: 5px;
     background-color: #FBB731;
+}
+.menu-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 34px;
+}
+.menu-title {
+    font-weight: 700;
+    font-size: 44px;
+    color: #1B2A49;
+    text-transform: uppercase;
+    margin: 0;
+}
+.menu-select {
+    border-radius: 22px;
+    border: 1px solid #DEDEDE;
+    padding: 13px 30px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    color: #443737;
+    font-size: 15px;
+    appearance: none;
+    flex-basis: 279px;
+    background-image: url(../img/arrow.svg);
+    background-repeat: no-repeat;
+    background-size: 12.79px 7.75px;
+    background-position: 89% center;
+}
+.menu-grid {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 43px 20px;
+    text-align: center;
+    margin-bottom: 100px;
+}
+.menu-grid-cover {
+    width: 100%;
+    height: 430px;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 23px;
+}
+.menu-grid-cover img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    width: 100%;
+    height: 430px;
+}
+.menu-grid-titel {
+    font-size: 30px;
+    font-weight: 600;
+    color: #1B2A49;
+    text-align: center;
+    margin: 0;
+    margin-top: 27px;
+}
+.menu-grid-price {
+    color: #979797;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 8px;
+    margin-bottom: 20px;
+}
+.menu-grid-btn {
+    border-radius: 5px;
+    background: #FBB731;
+    border: none;
+    padding: 13px 32px;
+    text-align: center;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    gap: 5px;
+}
+.menu-grid-text {
+    color: #1E2F40;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.menu-grid-icon {
+    background-image: url(../img/cart-menu.svg);
+    background-repeat: no-repeat;
+    color: #443737;
+    display: block;
+    background-size: 18px 18px;
+    width: 18px;
+    height: 18px;  
+}
+.footer {
+    background: #1E2F40;
+    color: #fff;
+    padding-top: 117px;
+    padding-bottom: 106px;
+    margin-top: 134px;
+}
+.footer-box {
+    display: flex;
+    justify-content: space-between;
+}
+.footer-logo {
+    width: 63px;
+    height: 56px;
+}
+.footer-item {
+    flex: 0 0 auto;
+}
+.footer-item h2 {
+    font-size: 20px;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-bottom: 19px;
+    margin-top: 0;
+}
+.footer-item li {
+    margin-bottom: 9px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    color: #FAF9F9;
+    font-weight: 700;
+    line-height: 24px;
+}
+.footer-item a {
+    color: #DEDEDE;
+    text-decoration: none;
+    font-weight: 400;
+}
+.footer-item span {
+    color: #DEDEDE;
+    display: block;
+    font-weight: 400;
+    margin-bottom: 2px;
+}
+.footer-tel ul {
+    font-size: 20px;
+    font-weight: 900;
+    color: #FBB731;
+    margin-top: 0;
+}
+.footer-tel li {
+    margin-bottom: 12px;
+}
+.footer-list {
+    padding-left: 0;
+    list-style-type: none;
 }
