--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,13 @@ header {
     padding-top: 26px;
     padding-bottom: 25px;
 }
+.header-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-basis: 76.8%;
+
+}
 .header-logo {
     display: block;
     background-image: url(../img/logo.svg);
@@ -179,12 +186,17 @@ header {
 }
 .banner-link {
     font-size: 14px;
-    padding: 20px 25px;
+    padding: 19px 24px;
     text-transform: uppercase;
     text-decoration: none;
     color: #1E2F40;
     border-radius: 5px;
     background-color: #FBB731;
+    border: 1px solid #FBB731;
+}
+.banner-link:hover {
+    background-color: transparent;
+    color: #FBB731;
 }
 .menu-header {
     display: flex;
@@ -263,6 +275,10 @@ header {
     margin: 0 auto;
     justify-content: center;
     gap: 5px;
+    cursor: pointer;
+}
+.menu-grid-btn:hover {
+    background: #F37335;
 }
 .menu-grid-text {
     color: #1E2F40;
@@ -304,7 +320,7 @@ header {
     margin-bottom: 19px;
     margin-top: 0;
 }
-.footer-item li {
+.footer-list li {
     margin-bottom: 9px;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
@@ -312,10 +328,13 @@ header {
     font-weight: 700;
     line-height: 24px;
 }
-.footer-item a {
+.footer-list a {
     color: #DEDEDE;
     text-decoration: none;
     font-weight: 400;
+}
+.footer-list a:hover {
+    color: #FBB731; 
 }
 .footer-item span {
     color: #DEDEDE;
@@ -323,16 +342,146 @@ header {
     font-weight: 400;
     margin-bottom: 2px;
 }
-.footer-tel ul {
-    font-size: 20px;
-    font-weight: 900;
-    color: #FBB731;
+.footer-list-tel  {
     margin-top: 0;
 }
-.footer-tel li {
+.footer-list-tel li {
     margin-bottom: 12px;
+}
+.footer-list-tel a {
+    font-size: 20px;
+    font-weight: 900;
+    color: #FBB731; 
+}
+.footer-list-tel a:hover {
+    color: #DEDEDE;
 }
 .footer-list {
     padding-left: 0;
     list-style-type: none;
+}
+/*------------ INDEX -----*/
+.main {
+    background: linear-gradient(180deg, #0C4C7B -100%, #1E2F40 100%);
+}
+.wrapper {
+    max-width: 1180px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+.content {
+    color: #FAF9F9;
+    flex: 0 0 580px;
+    padding-top: 170px;
+    padding-bottom: 170px;
+}
+.content-title{
+    font-size: 120px;
+    font-weight: 800;
+    text-transform: uppercase;
+    line-height: 120px;
+    margin-bottom: 40px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.content-title span {
+    color: #FBB731;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 38px;
+    display: block;
+    margin-bottom: 10px;
+}
+.content-text {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 19px;
+    line-height: 1.4;
+    margin-bottom: 42px;
+}
+.content-link,
+.promo a {
+    color: #1E2F40;
+    background-color: #FBB731;
+    border-radius: 5px;
+    text-decoration: none;
+    padding: 20px 45px;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+}
+.visual {
+    flex-grow: 1;
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+}
+.visual-bg {
+    width: 432px;
+    height: 100%;
+    background: linear-gradient(2.42deg, #F37335 -19.6%, #FBB731 100.79%, #FDC830 100.79%);
+}
+.main img {
+    width: 829px;
+    position: absolute;
+    right: -168px;
+}
+.promo {
+    padding-top: 186px;
+    padding-bottom: 46px;
+}
+.promo-left,
+.promo-right {
+    flex: 0 0 49%;
+    color: #fff;
+    box-sizing: border-box;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.promo-left {
+    background-image: url(../img/promo-left.png);
+    padding: 116px 50px;
+}
+.promo-right {
+    background-image: url(../img/promo-right.png);
+    padding: 102px 50px;
+}
+.sale {
+    font-size: 14px;
+    font-weight: 900;
+    background: #F37335;
+    padding: 5px 19px;
+    border-radius: 14px;
+    display: inline-block;
+    text-transform: uppercase;
+    margin-bottom: 3px;
+    margin-top: 0;
+}
+.cost {
+    font-size: 60px;
+    font-weight: 900;
+    margin-bottom: 8px;
+    margin-top: 0;
+}
+.promo-description {
+    font-family: 'Open Sans' sans-serif;
+    color: #FAF9F9;
+    font-size: 15px;
+    line-height: 24px;
+    margin-bottom: 0;
+}
+.promo-left .promo-description {
+    max-width: 392px;
+}
+.promo-right .promo-description {
+    max-width: 300px;
+    margin-bottom: 20px;
+}
+.free {
+    font-size: 44px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    margin-top: 0;
 }
