--- a/styles/main.css
+++ b/styles/main.css
@@ -47,7 +47,7 @@ header {
     font-size: 20px;
     color: #443737;
     text-decoration: none;
-    
+    transition: 0.2s;
 }
 .header-nav a::after{
     content: '';
@@ -116,6 +116,7 @@ header {
     font-size: 15px;
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
+    transition: 0.2s;
 }
 .breadcrumbs a:hover{
     color: #FFC725;
@@ -152,7 +153,7 @@ header {
     background-size: cover;
     padding: 100px 100px 120px;
     background-position: center center;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
 }
 .banner-title {
     font-weight: 900;
@@ -193,10 +194,15 @@ header {
     border-radius: 5px;
     background-color: #FBB731;
     border: 1px solid #FBB731;
+    transition: 0.2s;
 }
 .banner-link:hover {
     background-color: transparent;
     color: #FBB731;
+    transition: 0.3s;
+}
+.menu {
+    padding-top: 20px;
 }
 .menu-header {
     display: flex;
@@ -332,6 +338,7 @@ header {
     color: #DEDEDE;
     text-decoration: none;
     font-weight: 400;
+    transition: 0.2s;
 }
 .footer-list a:hover {
     color: #FBB731; 
@@ -352,6 +359,7 @@ header {
     font-size: 20px;
     font-weight: 900;
     color: #FBB731; 
+    transition: 0.2s;
 }
 .footer-list-tel a:hover {
     color: #DEDEDE;
@@ -359,6 +367,30 @@ header {
 .footer-list {
     padding-left: 0;
     list-style-type: none;
+}
+.button-up {
+    background-color: #FBB731; 
+    color: #1E2F40;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 5px 20px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 5px;
+    transition: 1s;
+}
+.button-up:hover {
+    background: #F37335;
+    transition: 0.2s;
+}
+.button-up.hidden {
+    opacity: 0;
+}
+.button-up.visible {
+    opacity: 1;
 }
 /*------------ INDEX -----*/
 .main {
