--- a/styles/main.css
+++ b/styles/main.css
@@ -152,7 +152,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     padding: 100px 100px 120px;
-    background-position: center center;
+    background-position: 0 center;
     margin-bottom: 80px;
 }
 .banner-title {
@@ -311,20 +311,20 @@ header {
 .footer-box {
     display: flex;
     justify-content: space-between;
+    gap: 20px;
 }
 .footer-logo {
     width: 63px;
     height: 56px;
 }
-.footer-item {
-    flex: 0 0 auto;
-}
+
 .footer-item h2 {
     font-size: 20px;
     font-weight: 800;
     text-transform: uppercase;
     margin-bottom: 19px;
     margin-top: 0;
+    line-height: 1.5;
 }
 .footer-list li {
     margin-bottom: 9px;
@@ -516,4 +516,253 @@ header {
     font-weight: 700;
     margin-bottom: 10px;
     margin-top: 0;
+}
+/*-------Responsive-------- */
+@media (min-width: 1001px) {
+    .footer-list + .footer-list-tel {
+        display: none;
+    }
+}
+@media (max-width: 1000px) {
+    .container {
+        max-width: 748px;
+    }
+    .header-logo {
+        width: 150px;
+        height: 48px;
+        background-size: contain;
+    }
+    .header-nav {
+        gap: 22px;
+    }
+    .header-item {
+        flex-basis: 90.8%;
+    }
+    .bg {
+        margin-bottom: 72px;
+    }
+    .banner-box {
+        background-position: -80px center;
+        padding: 100px 40px 120px;
+    }
+    .menu-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 43px 15px;
+    }
+    .footer-tel {
+        display: none;
+    }
+    .footer-list + .footer-list-tel {
+        display: block;
+    }
+    .menu-other {
+        overflow: hidden;
+        height: 633px;
+    }
+    .menu-other .menu-grid {
+        display: flex;
+        width: auto;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        padding-bottom: 50px;
+    }
+    .menu-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px 15px;
+    }
+    .menu-other .menu-grid-item {
+        flex: 0 0 281px;
+    }
+    .menu-other .menu-grid-cover,
+    .menu-other .menu-grid-cover img {
+        height: 320px;
+    }
+}
+@media (min-width: 766px) {
+    .header-burger {
+        display: none;
+    }
+}
+@media (max-width: 766px) {
+    nav {
+        display: none;
+    }
+    .header {
+        gap: 21px;
+    }
+    .menu-other .container {
+        padding-right: 0;
+    }
+    .button-up.visible {
+        display: none;
+    }
+}
+@media (max-width: 567px) {
+    .title {
+        font-size: 38px;
+    }
+    .breadcrumbs a {
+        font-size: 14px;
+    }
+    .deskription {
+        font-size: 12px;
+    }
+    .bg {
+        padding: 55px;
+    }
+    .banner-box {
+        padding: 35px 24px 54px;
+        background-position: 17% center;
+        margin-bottom: 38px;
+    }
+    .header-logo {
+        width: 116px;
+        height: 37px;
+    }
+    .header {
+        padding-top: 19px;
+        padding-bottom: 19px;
+    }
+    .bg {
+        margin-bottom: 33px;
+    }
+    .menu-title {
+        font-size: 27px;
+    }
+    .menu-select {
+        font-size: 12px;
+        flex-basis: 136px;
+        padding: 13px 23px 13px 15px;
+        background-position: 92% center;
+    }
+    .menu-header {
+        margin-bottom: 30px;
+    }
+    .menu-grid {
+        gap: 25px 10px;
+        margin-bottom: 30px;
+    }
+    .menu-grid-cover {
+        height: 56vw;
+        margin-bottom: 10px;
+    }
+    .menu-grid-cover img {
+        height: 100%;
+    }
+    .menu-grid-titel {
+        font-size: 15px;
+    }
+    .menu-grid-price {
+        font-size: 16px;
+        margin-top: 6px;
+        margin-bottom: 10px;
+    }
+    .menu-grid-btn {
+        padding: 10px 21px;
+    }
+    .menu-other .menu-grid-cover {
+        height: 51vw;
+    }
+    .menu-other .menu-grid-cover img {
+        height: 100%;
+    }
+    .menu-other .menu-grid-item {
+        flex: 0 0 43vw;
+    }
+    .menu-other {
+        height: 110vw;
+    }
+    .menu-other .menu-grid {
+        padding-bottom: 30vw;
+    }
+    .footer {
+        margin-top: 55px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .footer-list + .footer-list-tel {
+        display: none;
+    }
+    .footer-tel {
+        display: block;
+    }
+    .footer-box {
+        display: grid;
+        grid-template-columns: 30% 70%;
+        grid-template-areas: "logo tel" "link link" "info info";
+        gap: 0;
+    }
+    .footer-item:nth-child(1) {
+        grid-area: logo;
+    }
+    .footer-item:nth-child(2) {
+        grid-area: link;
+    }
+    .footer-item:nth-child(3) {
+        grid-area: info;
+    }
+    .footer-tel {
+        grid-area: tel;
+        text-align: right;
+    }
+}
+@media (max-width: 360px) {
+    .header-logo {
+        width: 116px;
+        height: 37px;
+        background-size: contain;
+    }
+    .menu-grid-titel {
+        font-size: 13px;
+        margin-top: 18px;
+    }
+}
+@media (max-width: 320px) {
+    .banner-box {
+        background-position: 25% center;
+    }
+}
+/*--------Modal-------- */
+.burger {
+    width: 34px;
+    height: 22px;
+    background-image: url(../img/burger.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+.modal {
+    background-color:  #FFF8DC;
+    max-width: 500px;
+    text-align: center;
+    position: absolute;
+    top: -400px;
+    left: 0;
+    right: 0;
+    margin: 20px auto 0;
+    padding: 40px 30px;
+    box-sizing: border-box;
+    transition: .5s;
+}
+.modal .header-nav {
+    flex-direction: column;
+    align-items: center;
+    gap: 23px;
+    margin: 0;
+    padding: 0;
+}
+.burger-close {
+    width: 22px;
+    height: 22px;
+    background-image: url(../img/close.svg);
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+    background-size: contain;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
