--- a/styles/main.css
+++ b/styles/main.css
@@ -225,7 +225,9 @@ header {
     font-weight: 400;
     color: #443737;
     font-size: 15px;
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     flex-basis: 279px;
     background-image: url(../img/arrow.svg);
     background-repeat: no-repeat;
@@ -251,7 +253,8 @@ header {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     width: 100%;
     height: 430px;
 }
