--- a/styles/main.css
+++ b/styles/main.css
@@ -501,7 +501,7 @@ header {
     margin-top: 0;
 }
 .promo-description {
-    font-family: 'Open Sans' sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: #FAF9F9;
     font-size: 15px;
     line-height: 24px;
